--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs access to location to show your position on the map.</string>
+	<string>This app needs access to location to show your position on the map and provide directions to doctors.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app needs access to location when in the background.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs location access to show directions to doctors and medical facilities.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -82,5 +84,16 @@
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<true/>
 	</dict>
+	
+	<!-- URL Launcher schemes for opening Google Maps and web URLs -->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+		<string>http</string>
+		<string>comgooglemaps</string>
+		<string>googlechromes</string>
+		<string>comgooglemapsweb</string>
+		<string>geo</string>
+	</array>
 </dict>
 </plist>
